@@ -9,15 +9,18 @@
 		* Should work for all SusyNt submission jobs
 		* Might replace the bash submission scripts
 		* Run with '-h' to see the available options
+	* Minor updates for SusyMetValidation
 
 2012-11-13 Matt
 	* Photons now saved by default (only tight ones, so size should not increase by much).
-	* Updated method in selectSignalPhotons(), but not uncommented. Need update to MultiLep package, wait for Steve
+	* Updated method in selectSignalPhotons(), but not uncommented. Need update to MultiLep package, 
+	  wait for Steve
 
 2012-11-12 Steve
 	* Adding methods to SusyD3PDAna for d3pd based analysis
 		* getLepSF, getBTagSF (not done) 
-		* I may want to add some equivalent to SusyNtTools, which will mostly just have kinematic functions such as Mll
+		* I may want to add some equivalent to SusyNtTools, which will mostly just have 
+		  kinematic functions such as Mll
 	* Removing some obsolete SusyD3PDAna code which was commented out anyway
 		* evtCheck, isHFORSample, dump, truth muon dump, getPileupWeight1fb
 	* Updates for SusyMetValidation, for checking the 3L met bump
